# baseRT

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  install.sh  mkdocs.yml
.github/workflows/: benchmark.yml  ci.yml  docs.yml  serve-smoke.yml
base-convert/: CANONICAL_QUANT_SPEC.md  Cargo.toml  FORMAT.md  README.md
base-convert/crates/base-arch/: Cargo.toml
base-convert/crates/base-arch/src/: bert.rs  gemma.rs  lib.rs  llama.rs  qwen.rs  tokenizer.rs
base-convert/crates/base-awq/: Cargo.toml
base-convert/crates/base-awq/src/: lib.rs  sidecar.rs  wikitext.rs
base-convert/crates/base-awq/tests/: awq_pipeline.rs
base-convert/crates/base-convert/: Cargo.toml
base-convert/crates/base-convert/src/: hub.rs  main.rs
base-convert/crates/base-convert/tests/: hub_e2e.rs  inventory.rs
base-convert/crates/base-format/: Cargo.toml
base-convert/crates/base-format/src/: error.rs  header.rs  lib.rs  reader.rs  slots.rs  writer.rs
base-convert/crates/base-format/tests/: roundtrip.rs
base-convert/crates/base-hub/: Cargo.toml  catalog.json
base-convert/crates/base-hub/src/: cache.rs  catalog.rs  fetch.rs  lib.rs  registry.rs
base-convert/crates/base-quant/: Cargo.toml
base-convert/crates/base-quant/src/: base_q2.rs  base_q3.rs  base_q4.rs  base_q5.rs  base_q6.rs  base_q8.rs  base_qn.rs  lib.rs  mxfp4.rs  nvfp4.rs  profile.rs  rtn.rs
base-convert/crates/base-quant/tests/: canonical_pipeline.rs
base-convert/crates/base-readers/: Cargo.toml
base-convert/crates/base-readers/examples/: gguf_inspect.rs
base-convert/crates/base-readers/src/: hf.rs  lib.rs  mlx.rs  safetensors.rs
base-convert/crates/base-readers/src/gguf/: dequant.rs  mod.rs  parse.rs
base-convert/crates/base-readers/tests/: mlx_dequant.rs
base-convert/crates/base-readers/tests/fixtures/: mlx_dequant_fixtures.rs
base-convert/crates/base-sign/: Cargo.toml
base-convert/crates/base-sign/src/: lib.rs
base-convert/crates/base-sign/tests/: sign_roundtrip.rs
base-convert/profiles/: PROFILES.md  default-q4-bf16.json  default-q4-f16scale.json  default-q4.json  default-q6.json  default-q8-f16scale.json  default-q8.json
benchmarks/: README.md
benchmarks/results/: m1-max-64gb_baseRT.csv  m1-max-64gb_baseRT.md  m1-max-64gb_baseRT.raw.md  m3-base_baseRT.csv  m4-pro_baseRT.csv
benchmarks/scripts/: baseRT_bench_only.sh  baseRT_mlx_bench.sh  clean_benchmark.sh  full_benchmark.sh  gguf_benchmark.sh  mlx_benchmark.sh  parse_bench.py  run_bench.sh  three_way_benchmark.sh  tool_state_smoke.py  uzu_benchmark.sh
benchmarks/tests/: test_parse_bench.py  test_run_bench.py  test_tool_state_smoke.py
bindings/node/: README.md  package-lock.json  package.json  tsconfig.json
bindings/node/src/: index.ts
bindings/node/src/__tests__/: baseRT.test.ts
bindings/python/: README.md  setup.py
bindings/python/baseRT/: __init__.py
bindings/python/tests/: test_baseRT.py
bindings/rust/: README.md
bindings/rust/baseRT/: Cargo.toml  build.rs
bindings/rust/baseRT-sys/: Cargo.toml  build.rs
bindings/rust/baseRT-sys/src/: lib.rs
bindings/rust/baseRT/examples/: smoke.rs
bindings/rust/baseRT/src/: lib.rs
bindings/swift/: Package.swift  README.md
bindings/swift/Sources/BaseRT/: BaseRT.swift  BaseRTEngine.swift
bindings/swift/Sources/CBaseRT/: shim.c
bindings/swift/Sources/CBaseRT/include/: baseRT.h  module.modulemap  shim.h  types.h
bindings/swift/Tests/BaseRTTests/: BaseRTTests.swift
docs/: ENGINE_RELEASE.md  index.md
docs/bindings/: index.md  node.md  python.md  rust.md  swift.md
docs/cli/: overview.md  reference.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: benchmarking.md  chat-complete.md  converting.md  models.md  serving.md  signing.md
docs/reference/: base-format.md  engine-releases.md  profiles.md  quantization.md  security.md  server-api.md
include/baseRT/: baseRT.h  types.h
