[package]
name = "base-quant"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
half.workspace = true
serde.workspace = true
serde_json.workspace = true
base-format.workspace = true

[dev-dependencies]
tempfile.workspace = true
