[package]
name = "base-readers"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
memmap2.workspace = true
serde.workspace = true
serde_json.workspace = true
half.workspace = true
base-format.workspace = true

[dev-dependencies]
tempfile.workspace = true
