[package]
name = "baseRT"
version = "0.2.0"
edition = "2021"
description = "Safe Rust bindings for the BaseRT LLM inference engine (Apple Silicon)"
license = "Apache-2.0"

[features]
default = []
# Forwarded to baseRT-sys: link the static engine archive instead of the dylib.
static = ["baseRT-sys/static"]

[dependencies]
baseRT-sys = { path = "../baseRT-sys" }
